# cod-ab-data-quality

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/: __main__.py  config.py  m49.csv  unterm.csv  utils.py
src/checks/: __main__.py  attribute_match.py  dates.py  geometry_valid.py  geometry_within_parent.py  table_names.py  table_names_config.py  table_names_utils.py  table_other.py  table_pcodes.py
src/download/: httpx.py  ogr2ogr.py
src/metadata/: __main__.py  getters.py  join.py
src/reports/: __main__.py  attribute.py  image.py
src/scores/: geometry_topology.py  geometry_validity.py  table_dates.py  table_names.py  table_pcodes.py
tests/: conftest.py
